css/main.css
:root {
  --primary-color: #ff931e;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  background: #f4f4f4;
  font-family: 'Raleway', sans-serif;
}

a {
  text-decoration: none;
  color: #333;
}

a:hover {
  color: var(--primary-color);
  transition: all 0.3s ease-in-out;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
}

a.anchor {
  display: block;
  position: relative;
  top: -70px;
  visibility: hidden;
}

.container {
  max-width: 1100px;
  margin: auto;
}

#navbar {
  display: flex;
  justify-content: space-between;
  position: sticky;
  background: #f4f4f4;
  top: 0;
  z-index: 1;
}

#navbar .logo a {
  display: flex;
}

#navbar .logo img {
  margin: 0rem 1rem 0rem 2rem;
  width: 35px;
}

#navbar .logo h2 {
  margin: 0.7rem 0;
}

#navbar ul {
  list-style: none;
  display: flex;
  align-items: center;
}

#navbar ul li {
  color: #333;
  padding: 1rem;
}

#navbar ul li a {
  color: #333;
  padding: 1rem;
  text-decoration: none;
}

#navbar ul li:hover {
  cursor: pointer;
  background: var(--primary-color);
  color: #fff;
  border-radius: 0 0 3px 3px;
  -webkit-border-radius: 0 0 3px 3px;
  -moz-border-radius: 0 0 3px 3px;
  -ms-border-radius: 0 0 3px 3px;
  -o-border-radius: 0 0 3px 3px;
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

#navbar ul li:hover a {
  color: #fff;
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

#navbar i {
  opacity: 0.5;
}

#about .about-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 2rem;
  margin: 3rem 2rem;
  padding: 2rem;
  background: #fff;
  color: #333;
  top: 2rem;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  -o-border-radius: 3px;
  box-shadow: 2px 2px 2px 2px #f2f2f2;
  transform: skewY(-2deg);
  -webkit-transform: skewY(-2deg);
  -moz-transform: skewY(-2deg);
  -ms-transform: skewY(-2deg);
  -o-transform: skewY(-2deg);
}

#about .about-container > div:first-child img {
  height: auto;
  width: 100%;
  transform: skewY(2deg);
  -webkit-transform: skewY(2deg);
  -moz-transform: skewY(2deg);
  -ms-transform: skewY(2deg);
  -o-transform: skewY(2deg);
  opacity: 0.8;
  pointer-events: none;
}

#about h1,
#about p {
  transform: skewY(2deg);
  -webkit-transform: skewY(2deg);
  -moz-transform: skewY(2deg);
  -ms-transform: skewY(2deg);
  -o-transform: skewY(2deg);
}

#about h1 {
  margin: 2rem 0;
}

#about p {
  line-height: 1.6;
  margin-bottom: 1rem;
}

#about p a {
  font-weight: bold;
}

#about h1 {
  font-size: 1.8rem;
}

#showcase .showcase-container {
  margin-top: 5rem;
  padding: 2rem;
}

#showcase .showcase-container h1 {
  text-align: center;
  margin-bottom: 2rem;
  font-size: 1.8rem;
}

#showcase .showcase-container #projects .highlight {
  color: var(--primary-color);
}

#showcase .showcase-container .cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 2rem;
}

#showcase .showcase-container .cards li {
  background: #fff;
  padding: 1rem;
  list-style: none;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  -o-border-radius: 3px;
  box-shadow: 2px 2px 2px 2px #f2f2f2;
  text-align: center;
  align-content: center;
}

#showcase .showcase-container .cards h2 {
  margin-bottom: 1rem;
}

#showcase .showcase-container .cards p {
  line-height: 1.6;
  margin-bottom: 1rem;
}

#showcase .showcase-container .cards img {
  width: 100%;
  margin-bottom: 1rem;
  pointer-events: none;
}

#showcase .showcase-container .cards .tags {
  font-size: 0.8rem;
  line-height: 1;
}

.btns {
  display: flex;
  justify-content: space-evenly;
  align-content: center;
  margin: 1rem 0 1.5rem;
}

.btn {
  border: none;
  background: #666;
  color: #fff;
  padding: 0.5rem 1rem;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  -o-border-radius: 3px;
  cursor: pointer;
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

.btn a {
  text-decoration: none;
  color: #fff;
}

.btn:hover {
  background: var(--primary-color);
  color: #fff;
}

.github {
  background: #fff;
  border: 1px solid #666;
  color: #333;
}

.github:hover {
  background: var(--primary-color);
}

.info i {
  color: #f6aa93;
}

#form .form-container {
  margin: 3rem 2rem 5rem 2rem;
  padding: 2rem;
  background: #fff;
  color: #333;
  top: 2rem;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  -o-border-radius: 3px;
  box-shadow: 2px 2px 2px 2px #f2f2f2;
  transform: skewY(2deg);
  -webkit-transform: skewY(2deg);
  -moz-transform: skewY(2deg);
  -ms-transform: skewY(2deg);
  -o-transform: skewY(2deg);
}

#form .form-content {
  line-height: 1.6;
  margin-top: 2rem;
  transform: skewY(-2deg);
  -webkit-transform: skewY(-2deg);
  -moz-transform: skewY(-2deg);
  -ms-transform: skewY(-2deg);
  -o-transform: skewY(-2deg);
}

#form h1,
#form p {
  width: 50%;
}

#form .below-form {
  width: 100%;
  margin-bottom: 3rem;
}

#form .highlight {
  color: var(--primary-color);
}

#form a {
  color: #333;
  font-weight: bold;
}

#form a:hover {
  color: var(--primary-color);
  font-weight: bold;
}

#form .form-fields {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 2rem;
}

#form .form {
  margin: 1rem 0;
}

#form .form input,
#form .form textarea {
  font-family: 'Raleway', sans-serif;
  font-size: 1rem;
  padding: 1rem;
  display: inline-block;
  border: 1px solid #333;
  background: #f4f4f4;
  width: 100%;
}

#form .form input {
  height: 2rem;
  margin-bottom: 1rem;
}

#form .form textarea {
  height: 10rem;
}

#form #success {
  display: none;
}

#form #success p {
  text-align: center;
  width: 100%;
}

#form #success p:first-child {
  color: #008d00;
  font-weight: bold;
}

#form .form .btn {
  width: 100%;
  margin: 1rem 0 3rem 0;
}

#form .form-fields > div:last-child img {
  margin-top: 3rem;
  height: auto;
  width: 100%;
  opacity: 0.85;
  pointer-events: none;
}

.btn-success {
  transform: skewY(2deg);
  -webkit-transform: skewY(2deg);
  -moz-transform: skewY(2deg);
  -ms-transform: skewY(2deg);
  -o-transform: skewY(2deg);
  margin-top: 2rem;
}

#success .success-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 2rem;
  margin: 3rem 2rem;
  padding: 2rem;
  background: #fff;
  color: #333;
  top: 2rem;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  -o-border-radius: 3px;
  box-shadow: 2px 2px 2px 2px #f2f2f2;
  transform: skewY(-2deg);
  -webkit-transform: skewY(-2deg);
  -moz-transform: skewY(-2deg);
  -ms-transform: skewY(-2deg);
  -o-transform: skewY(-2deg);
}

#success .success-container > div:first-child img {
  height: auto;
  width: 100%;
  transform: skewY(2deg);
  -webkit-transform: skewY(2deg);
  -moz-transform: skewY(2deg);
  -ms-transform: skewY(2deg);
  -o-transform: skewY(2deg);
  opacity: 0.8;
  pointer-events: none;
}

#success h1,
#success p {
  line-height: 1.6;
  margin-top: 2rem;
  transform: skewY(2deg);
  -webkit-transform: skewY(2deg);
  -moz-transform: skewY(2deg);
  -ms-transform: skewY(2deg);
  -o-transform: skewY(2deg);
}

#success h1 {
  font-size: 1.8rem;
}

#success .highlight {
  color: var(--primary-color);
  font-weight: bold;
}

#success .below-form a {
  color: #333;
  font-weight: bold;
}

#success .below-form a:hover {
  color: var(--primary-color);
}

.footer {
  text-align: center;
  font-size: 0.75rem;
  line-height: 1.6;
  background: #333;
  color: #ccc;
  padding: 4rem 0;
}

.footer a {
  color: #aaaaaa;
  text-decoration: none;
}

.footer a:hover {
  color: var(--primary-color);
  text-decoration: underline;
}

.footer i:hover {
  color: red;
}

@media screen and (max-width: 900px) {
  #about .about-container {
    grid-template-columns: 1fr 2fr;
  }

  #success .success-container {
    grid-template-columns: 1fr 2fr;
  }

  #showcase .showcase-container .cards {
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 2rem;
  }
}

@media screen and (max-width: 770px) {
  #about .about-container {
    grid-template-columns: 1fr;
    text-align: right;
    grid-gap: 0;
  }

  #about .about-container p,
  #about .about-container h1 {
    text-align: left;
  }

  #about .about-container h1 {
    margin-top: 1rem;
  }

  #about .about-container > div:first-child img {
    width: 70%;
    margin-bottom: 1rem;
  }

  #success .success-container {
    grid-template-columns: 1fr;
    text-align: right;
    grid-gap: 0;
  }

  #success .success-container p,
  #success .success-container h1 {
    text-align: left;
  }

  #success .success-container h1 {
    margin-top: 1rem;
  }

  #success .success-container > div:first-child img {
    width: 70%;
    margin-bottom: 1rem;
  }

  #form .form-fields {
    grid-template-columns: 1fr;
    grid-gap: 2rem;
  }

  #form h1,
  #form p {
    width: 100%;
  }

  #form .form-fields > div:last-child img {
    display: none;
  }

  #form .form .btn {
    margin: 1rem 0 0 0;
  }
}

@media screen and (max-width: 630px) {
  #navbar {
    display: block;
  }

  #navbar .logo a {
    justify-content: left;
  }

  #navbar .logo img {
    width: 2.5rem;
  }

  #navbar ul {
    justify-content: space-evenly;
  }

  #navbar ul li:first-child a {
    padding: 1rem 1rem 1rem 0;
  }

  #navbar ul li:last-child a {
    padding: 1rem 0 1rem 1rem;
  }

  .btns {
    display: block;
  }

  .btn {
    display: block;
  }

  .github {
    display: block;
    margin-top: 1.5rem;
  }
}

@media screen and (max-width: 500px) {
  #navbar ul {
    justify-content: space-evenly;
  }

  #navbar ul li {
    padding: 1rem 0;
  }

  #showcase .showcase-container .cards {
    grid-template-columns: 1fr;
    grid-gap: 2rem;
  }

  #showcase .showcase-container {
    margin-top: 2rem;
  }
}

